--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="./sass/main.css">
+        <link rel="stylesheet" href="./style/main.css">
     <title>Document</title>
 </head>
 <body class="portfolio body">
@@ -80,7 +80,7 @@
 <!----------list---------->
         <ul class="portfolio-list">
 
-            <li class="">
+            <li>
                 <a href="" class="list-portfolio portfolio-list-li">
                 <div class="list-patfolio-wrap">
                 <img alt="portfolio-list-li" src="./img/partfolio-project1.jpg" winght="370"  height="294px" class="port-list-img">
@@ -96,7 +96,7 @@
             </li>
 
             <li class="portfolio-list-li">
-                <a href="" class="list-portfolio">
+                <a href="" class="list-portfolio portfolio-list-li">
                     <div class="list-patfolio-wrap">
                 <img alt="" src="./img/partfolio-project2.jpg" winght="370" height="294px" class="port-list-img">
                 <p class="portfolio-list-scrol">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
@@ -110,7 +110,7 @@
             </li>
 
             <li class="portfolio-list-li">
-                <a href="" class="list-portfolio">
+                <a href="" class="list-portfolio portfolio-list-li">
                     <div class="list-patfolio-wrap">
                 <img alt="" src="./img/partfolio-project3.jpg" winght="370" height="294px" class="port-list-img">
                 <p class="portfolio-list-scrol">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
@@ -124,7 +124,7 @@
             </li>
 
             <li class="portfolio-list-li">
-                <a href="" class="list-portfolio">
+                <a href="" class="list-portfolio portfolio-list-li">
                     <div class="list-patfolio-wrap">
                 <img alt="" src="./img/partfolio-project4.jpg" winght="370" height="294px" class="port-list-img">
                 <p class="portfolio-list-scrol">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
@@ -138,7 +138,7 @@
             </li>
 
             <li class="portfolio-list-li">
-                <a href="" class="list-portfolio">
+                <a href="" class="list-portfolio portfolio-list-li">
                     <div class="list-patfolio-wrap">
                 <img alt="" src="./img/partfolio-project5.jpg" winght="370" height="294px" class="port-list-img">
                 <p class="portfolio-list-scrol">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
@@ -150,7 +150,7 @@
                  </div></a>
             </li>
             <li class="portfolio-list-li">
-                <a href="" class="list-portfolio">
+                <a href="" class="list-portfolio portfolio-list-li">
                     <div class="list-patfolio-wrap">
                 <img alt="" src="./img/partfolio-project6.jpg" winght="370" height="294px" class="port-list-img">
                 <p class="portfolio-list-scrol">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
@@ -163,7 +163,7 @@
             </li>
 
             <li class="portfolio-list-li">
-                <a href="" class="list-portfolio">
+                <a href="" class="list-portfolio portfolio-list-li">
                     <div class="list-patfolio-wrap">
                 <img alt="" src="./img/partfolio-project7.jpg" winght="370" height="294px" class="port-list-img">
                 <p class="portfolio-list-scrol">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
@@ -176,7 +176,7 @@
             </li>
             
             <li class="portfolio-list-li">
-                <a href="" class="list-portfolio">
+                <a href="" class="list-portfolio portfolio-list-li">
                     <div class="list-patfolio-wrap">
                 <img alt="" src="./img/partfolio-project8.jpg" winght="370" height="294px" class="port-list-img">
                 <p class="portfolio-list-scrol">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
@@ -189,7 +189,7 @@
             </li>
 
             <li class="portfolio-list-li">
-                <a href="" class="list-portfolio">
+                <a href="" class="list-portfolio portfolio-list-li">
                     <div class="list-patfolio-wrap">
                 <img alt="" src="./img/partfolio-project9.jpg" winght="370" height="294px" class="port-list-img">
                 <p class="portfolio-list-scrol">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
